--- a/styles.css
+++ b/styles.css
@@ -1,29 +1,103 @@
+@import url('https://fonts.googleapis.com/css2?family=Pridi:wght@200;300;400;500;600;700&display=swap');
+
 *{
     box-sizing: border-box;
-}
-#container{
-    display: grid;
-    grid-template-areas: 
-    "header header"
-    "sidebar main"
-    "footer footer";
-/* two by two grid: won't work at this moment yet*/
-/* three by three: "1 2 3" "4 5 6" "7 8 9"*/
-    grid-template-columns: 1fr 4fr;
-    grid-template-rows: auto 1fr auto;
-/*header and footer auto, whatever its inside is 1fr*/
-    min-height: 100vh;
-/*vh=viewport height*/
-}
-header{
-    grid-area: header;
-    background-color: #5c7c28;
-    color: #ffff;
-    text-align: center;
+    margin:0;
+    padding:0;
 }
 
-header nav li{
-    list-style-type: none; 
-/*to remove the bullet points*/
-    display: inline-block;
+body{
+    font-family: "Pridi", serif;
+    color-scheme: light dark;
+    line-height: 1.6;
+    color: #333;
+    padding:0;
+    margin: 0;
+    background-color: #fffaf1;
+}
+
+header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    background-color: #4d2d18;
+    color: white;
+    text-align: left;
+    padding: 30px;
+}
+
+header h1{
+    font-size: 2.5rem;
+    font-weight: 400;
+    margin-left: 10px;
+    font-family: inherit;
+}
+
+.nav-buttons {
+    display: flex;
+    justify-content: flex-start;
+    margin-left: 30px;
+}
+
+button {
+    background-color: antiquewhite;
+    color: #333;
+    border: none;
+    padding: 10px 20px;
+    margin: 10px 5px;
+    font-size: 1rem;
+    font-family: inherit;
+    cursor: pointer;
+    border-radius: 8px;
+}
+
+button:hover {
+    background-color: #333;
+    color: antiquewhite;
+}
+
+button:active {
+    background-color: #c38452;
+    color: antiquewhite;
+}
+
+button:focus {
+    outline: none;
+    background-color: #c38452;
+    color: antiquewhite;
+}
+
+.content {
+    display: flex;
+    align-items: center;
+    background-color: #8a6240;
+    padding: 40px;
+    border-radius: 8px;
+}
+main {
+    color: #333;
+    padding: 20px;
+}
+
+main h2{
+    font-size: 3.5rem;
+    font-weight: 500;
+    text-align: center;
+    margin: 40px;
+}
+
+main figcaption {
+    flex-grow: 1;
+    font-size: 1.1rem;
+    line-height: 1.5;
+    color: white;
+    margin: 20px;
+    text-align:center;
+}
+
+main img {
+    max-width: 400px;
+    height: auto;
+    border-radius: 8px;
+    margin-left: 50px;
 }
