--- a/styles.css
+++ b/styles.css
@@ -75,7 +75,6 @@ button:focus {
     border-radius: 8px;
 }
 main {
-    color: #333;
     padding: 20px;
 }
 
@@ -100,4 +99,96 @@ main img {
     height: auto;
     border-radius: 8px;
     margin-left: 50px;
+}
+
+
+
+@media screen and (min-width: 2400px) and (max-width:3200px){
+    header {
+        padding: 50px;
+    }
+    header h1{
+        font-size: 5rem;
+        margin-left: 30px;
+    }
+    button {
+        padding: 20px 30px;
+        margin: 30px 5px;
+        margin-right: 30px;
+        font-size: 2.6rem;
+    }
+    main h2{
+        font-size: 4.5rem;
+        font-weight: 500;
+    }
+    main figcaption {
+        font-size: 2rem;
+        margin-right:100px;
+    }
+    main img {
+        max-width: 600px;
+        height: auto;
+        margin-left: 100px;
+    }
+
+}
+
+@media screen and (min-width: 1890px) and (max-width:2399px){
+    header h1{
+        font-size: 3.8rem;
+        margin-left: 30px;
+    }
+    button {
+        padding: 23px 35px;
+        font-size: 1.8rem;
+        font-family: inherit;
+        margin-right: 30px;
+    }
+    main figcaption {
+        font-size: 1.5rem;
+        margin: 20px;
+    }
+}
+
+@media screen and (max-width:768px){
+    header {
+        flex-direction: column;
+        align-items: center;
+        text-align: center;    
+    }
+    header h1{
+        font-size: 3rem;
+        font-weight: 400;
+        margin:auto;
+        margin-bottom: 20px;
+        font-family: inherit;
+    }
+    button {
+        padding: 10px 10px;
+        font-size: 1rem;
+    }
+    .content {
+        flex-direction: column;
+        margin: auto;
+        align-items: center;
+    }
+    main h2{
+        font-size: 2.2rem;
+        text-align: center;
+        margin: auto;
+        margin-top: 10px;
+        margin-bottom: 20px;
+    }
+    main figcaption {
+        width: auto;
+        margin: auto;
+    }
+    
+    main img {
+        margin-bottom: 20px;
+        max-width: 80%;
+        display: block;
+        margin: auto;
+        margin-bottom: 20px;
+    }
 }
