--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,3 @@
-@import url('https://fonts.googleapis.com/css2?family=Pridi:wght@200;300;400;500;600;700&display=swap');
-
 *{
     box-sizing: border-box;
     margin:0;
@@ -7,7 +5,7 @@
 }
 
 body{
-    font-family: "Pridi", serif;
+    font-family: inherit, serif;
     color-scheme: light dark;
     line-height: 1.6;
     color: #333;
